# huleedu

./: ....  .coverage  .dockerignore  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .pylintrc  070-testing-compressed.md  071-performance-testing-patterns.md  AGENTS.md  CHANGELOG.md  CJ_ASSESSMENT_INTEGRATION_TESTING.md  CJ_ASSESSMENT_INTEGRATION_TESTING_v3.md  CJ_ASSESSMENT_LOC_REFACTORING_PROMPT.md  CLAUDE.md  CODEX.md  CONTINUATION_PROMPT_CORRELATION_ID_REFACTOR.md  CURSOR.md  DEVELOPER.md  Dockerfile.deps  FUNCTIONAL_TESTS_COMPLETE_FIX_SUMMARY.md  GEMINI.md  IDEMPOTENCY_CONSOLIDATION_STATUS.md  LLM_PROVIDER_SERVICE_CONTINUATION.md  LLM_PROVIDER_SERVICE_INTERFACE_FIX.md  LLM_PROVIDER_SERVICE_PHASE_2_PROMPT.md  MIGRATION_HANDOFF.md  MIGRATION_PHASE_4_ERRORDETAIL.md  MIGRATION_SUMMARY_2025-11-21.md  NEW_SESSION_PROMPT.md  NEXT_SESSION_CONTEXT.md  NEXT_SESSION_PROMPT_PHASE4B.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_1_QUEUE_IMPLEMENTATION_PLAN.md  PHASE_2_CONTINUATION_PROMPT.md  PHASE_3_CONTINUATION_PROMPT.md  README.html  README.md  REVIEW_PROMPT_METADATA_POPULATION.md  (+57 more)
common_core/: pyproject.toml
common_core/tests/: test_event_utils.py  test_model_rebuilding.py
libs/huleedu_nlp_shared/: README.md  pyproject.toml
libs/huleedu_service_libs/: README.md  pyproject.toml
services/api_gateway_service/: Dockerfile  Dockerfile.backup  Dockerfile.dev  README.md  WEBSOCKET_README.md  __init__.py  acl_transformers.py  auth.py  config.py  protocols.py  pyproject.toml
services/batch_conductor_service/: Dockerfile  Dockerfile.dev  README.md  __init__.py  alembic.ini  api_models.py  app.py  config.py  di.py  kafka_consumer.py  metrics.py  models_db.py  pipeline_definitions.py  pipeline_generator.py  pipelines.yaml  protocols.py  pyproject.toml  startup_setup.py
services/batch_orchestrator_service/: Dockerfile  Dockerfile.backup  Dockerfile.dev  README.md  __init__.py  alembic.ini  api_models.py  app.py  config.py  di.py  enums_db.py  kafka_consumer.py  metrics.py  models_db.py  notification_projector.py  protocols.py  pyproject.toml  startup_setup.py
services/batch_service/: Dockerfile  __init__.py  app.py  config.py  di.py  hypercorn_config.py  protocols.py  pyproject.toml
services/cj_assessment_service/: Dockerfile  Dockerfile.dev  README.md  ULTRATHINK_ANCHOR_GRADE_DISTRIBUTION_ANALYSIS.md  __init__.py  alembic.ini  app.py  batch_monitor.py  cli_admin.py  config.py  core_assessment_logic.py  di.py  enums.py  enums_db.py  event_processor.py  exceptions.py  kafka_consumer.py  metrics.py  models_api.py  models_db.py  models_prompt.py  outbox_relay_worker.py  pair_generation.py  protocols.py  pyproject.toml  run_service.py  scoring_ranking.py  startup_setup.py  worker_main.py
services/class_management_service/: Dockerfile  Dockerfile.backup  Dockerfile.dev  README.md  __init__.py  alembic.ini  api_models.py  app.py  config.py  constants.py  core_logic.py  di.py  event_processor.py  exceptions.py  kafka_consumer.py  metrics.py  models_db.py  notification_projector.py  protocols.py  pyproject.toml  startup_setup.py
services/content_service/: .env.example  .pylintrc  Dockerfile  Dockerfile.backup  Dockerfile.dev  README.md  __init__.py  alembic.ini  app.py  config.py  di.py  hypercorn_config.py  metrics.py  models_db.py  protocols.py  pyproject.toml  startup_setup.py
services/email_service/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  app.py  config.py  di.py  event_processor.py  kafka_consumer.py  metrics.py  models_db.py  protocols.py  pyproject.toml  startup_setup.py
services/entitlements_service/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  app.py  config.py  di.py  kafka_consumer.py  metrics.py  models_db.py  protocols.py  pyproject.toml  startup_setup.py
services/essay_lifecycle_service/: Dockerfile  Dockerfile.dev  README.md  __init__.py  alembic.ini  app.py  batch_command_handlers.py  batch_tracker.py  config.py  constants.py  core_logic.py  di.py  di.py.backup  domain_models.py  essay_state_machine.py  event_router.py  metrics.py  models_db.py  notification_projector.py  protocols.py  pyproject.toml  startup_setup.py  state_store.py  worker_main.py
services/file_service/: Dockerfile  Dockerfile.dev  README.md  __init__.py  alembic.ini  app.py  config.py  content_validator.py  core_logic.py  di.py  hypercorn_config.py  metrics.py  models_db.py  notification_projector.py  protocols.py  pyproject.toml  startup_setup.py  text_processing.py  validation_models.py
services/identity_service/: Dockerfile  Dockerfile.dev  JWT_INFRASTRUCTURE.md  README.md  __init__.py  alembic.ini  app.py  config.py  di.py  kafka_consumer.py  metrics.py  models_db.py  notification_orchestrator.py  protocols.py  pyproject.toml  startup_setup.py
services/language_tool_service/: Dockerfile  Dockerfile.dev  README.md  __init__.py  api_models.py  app.py  config.py  di.py  hypercorn_config.py  metrics.py  protocols.py  pyproject.toml  startup_setup.py
services/libs/: __init__.py  mypy.ini  pyproject.toml
services/llm_provider_service/: Dockerfile  Dockerfile.dev  ENVIRONMENT_VARIABLES.md  README.md  TODO_COST_TRACKING.md  admin_cli.py  api_models.py  app.py  cli_check_models.py  cli_output_formatter.py  compatibility_reporter.py  config.py  di.py  error_handlers.py  error_types.py  exceptions.py  internal_models.py  metrics.py  model_manifest.py  prompt_utils.py  protocol_validation.py  protocols.py  pyproject.toml  queue_models.py  response_validator.py  startup_setup.py
services/nlp_service/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  config.py  di.py  di_nlp_analysis.py  di_nlp_dependencies.py  event_processor.py  kafka_consumer.py  metrics.py  models_db.py  nlp_dependency_protocols.py  protocols.py  pyproject.toml  worker_main.py
services/result_aggregator_service/: Dockerfile  Dockerfile.dev  IMPLEMENTATION_STATUS.md  README.md  __init__.py  alembic.ini  app.py  config.py  di.py  enums_api.py  enums_db.py  kafka_consumer.py  metrics.py  models_api.py  models_db.py  notification_projector.py  protocols.py  pyproject.toml  (+1 more)
(+4357 files in other folders)
