[project]
name = "huledu-monorepo"
version = "0.2.0"
description = "HuleEdu Monorepo - Reboot to Microservices"
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}

# Minimal root dependencies - most deps are per-service or in common_core
dependencies = [
    "python-dotenv",
    "pypandoc",
    "aiohttp",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "pydantic",
    "pydantic-settings",
    "PyJWT",  # For test authentication
    "psutil>=7.0.0",
]

[dependency-groups]
# Tools for overall monorepo management - let PDM resolve latest compatible versions
monorepo-tools = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "httpx",
    "pre-commit",
    "testcontainers[postgres,kafka,redis]",  # For PostgreSQL, Kafka, and Redis integration tests
    "kafka-python",
    "respx",
    "freezegun",  # For time-based testing
    "types-psutil",  # Type stubs for psutil
    "reportlab",  # For PDF generation in file service integration tests
    "types-reportlab",  # Type stubs for reportlab
]

# Install all services and common_core for unified development
dev = [
    "coverage>=7.9.2",
    "redis>=6.2.0",
    "aioresponses>=0.7.8",
    "radon>=6.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".pdm-python",
    ".pdm-build",
    "common_core/.venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
]

[tool.ruff.format]
  quote-style = "double"
  indent-style = "space"

[tool.ruff.lint.per-file-ignores]
# Allow imports after load_dotenv() in service entry points
"services/*/app.py" = ["E402"]
"services/*/worker.py" = ["E402"]
# Union import needed for Pydantic model rebuilding (not directly used in file)
"libs/common_core/src/common_core/__init__.py" = ["F401"]
# Allow imports after sys.path modification in alembic env files
"services/*/alembic/env.py" = ["E402"]

# Note: Import restrictions would be enforced through custom linting rules
# For now, rely on type system and code review to prevent standard library logging

[tool.mypy]
mypy_path = "stubs"
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
exclude = [
    "libs/common_core/src/",
    "libs/huleedu_service_libs/",
    "cj_essay_assessment/",
    "scripts/",
    "services/batch_orchestrator_service/implementations/circuit_breaker_example.py",
]

# Per-module settings for new microservices (stricter)
[[tool.mypy.overrides]]
module = [
    "common_core.*",
    "libs.*",
    "services.content_service.*",
    "services.spellchecker_service.*",
    "services.batch_orchestrator_service.*",
    "services.essay_lifecycle_service.*",
    "services.file_service.*",
    "services.cj_assessment_service.*",
    "services.class_management_service.*",
    "services.result_aggregator_service.*",
    "services.llm_provider_service.*",
    "services.websocket_service.*",
    "services.nlp_service.*",
    "services.identity_service.*",
    "services.email_service.*",
]
ignore_missing_imports = false
disallow_untyped_defs = true

# External libraries without official type stubs
[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "aiofiles.*",
    "dishka.*",
    "quart_dishka.*",
    "httpx.*",
    "spell_logic.*",
    "diskcache.*",
    "choix.*",
    "tenacity.*",
    "sqlalchemy.*",
    "asyncpg.*",
    "testcontainers.*",
    "kafka.*", # For kafka-python library
    "redis.*",  # Redis client library
    "enums_db",       # Database enum module without type stubs
    "models_db",      # Database models module without type stubs
    "yaml.*",       # PyYAML stubs
    "pypandoc.*",   # pypandoc lacks type stubs
    "magic.*",      # python-magic lacks type stubs
    "spacy.*",      # spaCy NLP framework
    "langdetect.*", # Language detection library
    "wordfreq.*",   # Word frequency library
    "lexical_diversity.*", # Lexical diversity metrics
    "gensim.*",     # Topic modeling and NLP library
    "textdescriptives.*", # Text complexity metrics
    "fastapi.*",
    "starlette.*",
    "rich.*",       # Rich library for terminal formatting
    "opentelemetry.*",  # OpenTelemetry instrumentation libraries
    "scipy.*",      # SciPy lacks complete type stubs
    "sklearn.*",    # scikit-learn lacks type stubs
]
ignore_missing_imports = true

# Service-local config modules and API modules
[[tool.mypy.overrides]]
module = [
    "config", 
    "worker_main", 
    "core_logic", 
    "core_logic.*",
    "event_router", 
    "event_processor",
    "protocols", 
    "di", 
    "state_store", 
    "batch_command_handlers",
    "batch_tracker",
    "implementations.*",
    "protocol_implementations.*",
    "api.*",
    "api_models",
    "models_api",
    "kafka_consumer",
    "metrics",
    "startup_setup",
    "text_processing",
    "hypercorn_config",
    "pair_generation",
    "scoring_ranking",
    "core_assessment_logic",
    "transitions.*",  # State machine library without type stubs
    "essay_state_machine",  # Local module without py.typed marker
    "services.batch_orchestrator_service.implementations.circuit_breaker_example",  # Example file with complex circuit breaker typing
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["."] 
omit = [
    "*test*",
    "*__pycache__*",
    "*venv*",
    "*.venv*",
    "*migrations*",
    "*setup.py",
    "*__init__.py",
    "*__dishka_*",
    "*dist-packages*",
    "*site-packages*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise ImportError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "if TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
    "@property",
    "@classmethod",
    "@staticmethod",
    "def __new__",
    "def __init__",
    "def __call__",
    "raise NotImplemented",
    "@pytest.fixture",
    "@pytest.mark",
    "@pytest.skip",
    "@pytest.mark.skip",
    "@pytest.mark.skipif",
]

[tool.pytest.ini_options]

testpaths = [
    "tests",
    "libs/common_core/tests",
    "libs/huleedu_service_libs/tests",
    "services/content_service/tests",
    "services/spellchecker_service/tests",
    "services/batch_orchestrator_service/tests",
    "services/essay_lifecycle_service/tests",
    "services/file_service/tests",
    "services/cj_assessment_service/tests",
    "services/class_management_service/tests",
    "services/result_aggregator_service/tests",
    "services/llm_provider_service/tests",
    "services/websocket_service/tests",
    "services/nlp_service/tests",
    "services/identity_service/tests",
    "services/email_service/tests"
]
pythonpath = [
    "."
]
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-s -v --durations=10 --log-cli-level=INFO --import-mode=importlib -m 'not (financial or slow or docker)'"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s:%(filename)s:%(lineno)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

markers = [
    "financial: marks tests that incur real monetary costs via external API calls",
    "slow: marks tests as slow running",
    "performance: marks tests that perform load testing or performance benchmarking",
    "integration: marks tests requiring external services like Kafka",
    "docker: marks tests that need docker-compose setup",
    "kafka: marks tests requiring a Kafka instance",
    "e2e: marks tests as end-to-end pipeline tests",
    "functional: marks functional tests that verify cross-service behavior",
    "timeout: marks tests with specific timeout requirements",
    "no_prometheus_clear: marks tests that should not have their Prometheus registry cleared",
    "unit: marks tests as unit tests for isolated component testing",
]

filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:pkg_resources",
    # Suppress spacy's internal click parser deprecation (library issue, not our code)
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning:spacy.cli._util",
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning:weasel.util.config",
    # Suppress lexical_diversity's internal pkg_resources usage (library issue, not our code)
    "ignore:pkg_resources is deprecated as an API:UserWarning:lexical_diversity.lex_div",
]


[tool.pdm]
distribution = false

[tool.pdm.scripts]
# Monorepo-wide scripts
format-all = "ruff format --force-exclude ."
check-imports = "python scripts/check_import_patterns.py"
lint-all = {composite = ["ruff check --force-exclude .", "python scripts/check_import_patterns.py"]}
lint-fix = "ruff check --fix --force-exclude ."
typecheck-all = "mypy --config-file pyproject.toml --follow-imports=silent services tests"
typecheck-libs = {composite = ["cd libs && mypy -p common_core --show-error-codes", "cd libs && mypy -p huleedu_service_libs --show-error-codes"]}
typecheck-common-core = {shell = "cd libs && mypy -p common_core --show-error-codes"}
typecheck-service-libs = {shell = "cd libs && mypy -p huleedu_service_libs --show-error-codes"}
test-all = "pytest"
test-parallel = "pytest -n auto"
test-sequential = "pytest -n 0"
test-expensive = "pytest -m 'financial or slow or docker' -v --tb=short"
test-financial = "pytest -m financial -v --tb=short"
test-providers = "pytest services/*/tests/integration/ -m 'financial or slow or docker' -v"

# Core Development Workflows (use scripts/dev-workflow.sh for most tasks)
dev = "scripts/dev-workflow.sh"  # Main development script: pdm run dev <command> <service>
up = "docker compose up -d"  # Start services
down = "docker compose down --remove-orphans"  # Stop services  
logs = "docker compose logs -f --tail=50"  # Follow logs: pdm run logs <service>
restart = {shell = "docker-compose -f docker-compose.yml -f docker-compose.dev.yml restart $@"}  # Restart dev services: pdm run restart <service1> <service2>
restart-all = "docker-compose -f docker-compose.yml -f docker-compose.dev.yml restart"  # Restart all dev services

# Database Management
db-reset = "scripts/reset-dev-databases.sh"  # Reset development databases
db-seed = "scripts/seed-dev-data.sh"  # Seed development data

# Production Deployment
prod-validate = "scripts/validate-production-config.sh"  # Validate production config
prod-migrate = "scripts/migrate-production.sh"  # Run production migrations

# Utilities
build-common-core = "pdm build -p libs/common_core"  # Build shared library
kafka-setup = "python scripts/kafka_topic_bootstrap.py"  # Initialize Kafka topics
docker-clean = "docker system prune -af"  # Clean Docker resources (use with caution)

# Observability is integrated into main stack - use standard docker compose commands
obs-restart = "docker compose restart prometheus grafana loki jaeger promtail alertmanager"
obs-logs = "docker compose logs -f prometheus grafana loki jaeger promtail alertmanager"
obs-status = "docker compose ps prometheus grafana loki jaeger promtail alertmanager"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/libs/common_core",
    "-e file:///${PROJECT_ROOT}/libs/huleedu_service_libs",
    "-e file:///${PROJECT_ROOT}/services/content_service",
    "-e file:///${PROJECT_ROOT}/services/spellchecker_service",
    "-e file:///${PROJECT_ROOT}/services/batch_orchestrator_service",
    "-e file:///${PROJECT_ROOT}/services/essay_lifecycle_service",
    "-e file:///${PROJECT_ROOT}/services/file_service",
    "-e file:///${PROJECT_ROOT}/services/cj_assessment_service",
    "-e file:///${PROJECT_ROOT}/services/class_management_service",
    "-e file:///${PROJECT_ROOT}/services/api_gateway_service",
    "-e file:///${PROJECT_ROOT}/services/result_aggregator_service",
    "-e file:///${PROJECT_ROOT}/services/llm_provider_service",
    "-e file:///${PROJECT_ROOT}/services/websocket_service",
    "-e file:///${PROJECT_ROOT}/services/nlp_service",
    "-e file:///${PROJECT_ROOT}/services/identity_service",
    "-e file:///${PROJECT_ROOT}/services/email_service",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
